--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import 'primereact/resources/primereact.min.css';
+@import 'primeicons/primeicons.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
